--- a/20141211-job/test.org
+++ b/20141211-job/test.org
@@ -21,14 +21,33 @@
 
 * 技术岗位有哪些？
 
-各个岗位的位置，职能
+#+caption: 基础服务、算法服务、客户端
+[[./uml/programmer.png]]
 
 * 准备：算法题
 
-给教材
+- 全真教：CLRS、DPV、KT、ADM
+  - 选一本就好
+  - 厚，读起来容易烦
+  - 效果不是立竿见影的，有些知识没法在面试中考察
+  - 一定要做习题
+- 白驼山：LeetCode、PIE、CTCI、剑指 offer
+  - 真正会考的题
+  - 像考试一样准备
+  - 手写
+  - 做不出来、写不完没关系，把思路讲明白
+- 桃花岛：编程珠玑
 
 * 准备：语言
 
+- 深入一两种，多学几种，了解各种不同的思想，而且学语言比较有趣
+- 必修
+  - c：精通，对于了解底层原理非常重要，k&r
+  - java：了解，职位很多，很规范
+  - python：了解，简单，好用
+  - markdown：写文档
+- 选修
+  - html、css
 给出必学的几种（c、java、python、markdown），建议大家深入一种，多学几种
 
 * 准备：基础知识
