--- a/20141211-job/test.org
+++ b/20141211-job/test.org
@@ -43,32 +43,67 @@
 - 深入一两种，多学几种，了解各种不同的思想，而且学语言比较有趣
 - 必修
   - c：精通，对于了解底层原理非常重要，k&r
-  - java：了解，职位很多，很规范
-  - python：了解，简单，好用
-  - markdown：写文档
-- 选修
-  - html、css
-给出必学的几种（c、java、python、markdown），建议大家深入一种，多学几种
+- 强烈推荐
+  - java：了解，职位很多，有助于养成好习惯
+  - python：了解，简单，提高生活品质
+  - markdown：写文档，妈妈再也不用担心我设置格式的问题啦
+- 选修：有时间可以看看
+  - shell：将 *nix 下的工作自动化
+  - HTML、CSS：写博客，做个小应用都会用到
+  - c++：大家都有基础，不过太难精通了
+  - haskell：函数式编程
 
 * 准备：基础知识
 
-必学：网络、*nix、数据库
-
-选学：结合自己已有的专业知识、大数据、分布式
+- 最好是能结合自己的背景知识
+- 必修
+  - 网络：TCP/IP、HTTP、七层模型、网站是如何工作的、编程实践（UNP）
+  - *nix：基本使用（鸟哥的 Linux 私房菜）、*nix 环境下的编程与概念（APUE）
+  - 数据库：基本的 SQL（SQL 必知必会）
+- 选修：了解些基本概念，锦上添花
+  - 操作系统
+  - 数据挖掘
+  - 分布式
+  - 机器学习
+  - 搜索算法
 
 * 准备：实习与开源项目
 
-必要性：了解商业环境下是怎么开发的
+- 实习
+  - 有实习是最好的
+  - 了解真正的程序员是如何开发的：代码管理、应用部署
+  - 能够转正的话，会减轻不少压力
+  - 入行前最后确认，这条路到底是不是适合自己
+- 开源项目
+  - 目的与实习类似，但并不是那么容易参与
+  - 了解工程师文化
+  - 有一定的可能性带来工作机会
 
 * 我的求职经历
 
+- offer：阿里巴巴、中兴、豆瓣（实习）
+- 终面挂：网易游戏
+- 一面挂：Facebook、百度
+- 笔试挂：腾讯（霸笔）
+- 简历挂：腾讯、有道、迅雷
+
 * 个人的经验与教训
 
-深度第一
+- 深度比广度重要
+- 校招和考试一样，需要大量的时间准备
+- 各家的校招都差不多，笔经面经挺靠谱
+- 别灰心丧气，运气成分很大
+- 最好是能在正式校招之前解决战斗……
 
 * 以后的路
 
-* 欢迎提问 =foomomobar=
+- 我们和北大青鸟有区别么？
+  - 大厨与切菜
+  - Be a hacker：Thompson & Ritchie、RMS、Linus、Doug Cutting
+    - 自己动手改变世界
+    - 不将就
+
+* 祝大家能够从事自己热爱的事业 =foomomobar=
 
 #+caption: 我的微信公众号
 [[./qrcode.jpg]]
